--- a/app/src/main/res/layout/activity_belong_small_group.xml
+++ b/app/src/main/res/layout/activity_belong_small_group.xml
@@ -1,97 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BelongSmallGroup">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="50sp" />
-        <ImageButton
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bejji" />
 
-            android:id="@+id/Groupimage"
-            android:layout_gravity="center"
-            android:scaleType="fitXY"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            tools:srcCompat="@drawable/ourbaseconcept" />
+    <TextView
+        android:id="@+id/GroupTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="100dp"
+        android:text="TextView"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="50sp" />
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout3"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/GroupTitle">
 
-        <TextView
-            android:id="@+id/NameByGroup"
-            android:layout_width="match_parent"
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:text="날씨도 좋은데"
-            android:textSize="30sp" />
+            android:text="Monday" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="50sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageButton3"
-                android:layout_width="150dp"
-                android:layout_height="300dp"
-                android:scaleType="fitXY"
-                android:layout_weight="1"
-                tools:srcCompat="@drawable/mybbc1" />
-
-            <ImageView
-                android:id="@+id/imageButton4"
-                android:layout_width="150dp"
-                android:layout_height="300dp"
-                android:scaleType="fitXY"
-                android:layout_weight="1"
-                tools:srcCompat="@drawable/mybbc2" />
-
-            <ImageView
-                android:id="@+id/imageButton5"
-                android:layout_width="150dp"
-                android:layout_height="300dp"
-                android:scaleType="fitXY"
-                android:layout_weight="1"
-                tools:srcCompat="@drawable/mybbc3" />
-        </LinearLayout>
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="50sp" />
-
-        <TextView
-            android:id="@+id/textView64"
-            android:layout_width="match_parent"
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:text="모임공지글" />
+            android:text="Tuesday" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="50sp" />
-
-        <Button
-            android:id="@+id/chatbutton"
-            android:layout_width="match_parent"
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="모임채팅방" />
-    </LinearLayout>
-</ScrollView>
+            android:text="Wednesday" />
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager24"
+        android:layout_width="409dp"
+        android:layout_height="350dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout3" />
+
+    <Button
+        android:id="@+id/chattingButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="채팅방"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager24" />
+</androidx.constraintlayout.widget.ConstraintLayout>
