--- a/app/src/main/res/layout/dialog_hobby_info.xml
+++ b/app/src/main/res/layout/dialog_hobby_info.xml
@@ -11,6 +11,12 @@
         android:layout_weight="1"
         android:gravity="center">
 
+        <ImageView
+            android:id="@+id/group_image"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/bejji"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
