--- a/app/src/main/res/layout/activity_user_my_page.xml
+++ b/app/src/main/res/layout/activity_user_my_page.xml
@@ -11,25 +11,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:text="NickName"
+        android:layout_marginTop="74dp"
 
+        android:text="NickName"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="400dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />
 
     <EditText
         android:id="@+id/editTextTextPersonName3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="58dp"
+        android:layout_marginTop="62dp"
         android:layout_marginEnd="52dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView56"
-        tools:layout_editor_absoluteY="388dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />
 
     <TextView
         android:id="@+id/textView57"
@@ -59,11 +61,9 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="159dp"
         android:layout_marginTop="83dp"
-        android:layout_marginEnd="158dp"
         android:layout_marginBottom="69dp"
         android:text="apply"
         app:layout_constraintBottom_toBottomOf="parent"
