--- a/app/src/main/res/layout/item_accept_user.xml
+++ b/app/src/main/res/layout/item_accept_user.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:src="@drawable/bejji" />
 
     <ImageView
         android:id="@+id/starred"
