--- a/app/src/main/res/layout/activity_create_hobby.xml
+++ b/app/src/main/res/layout/activity_create_hobby.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/create_group_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="모임명을 입력하세요."
+                android:hint="카테고리를 입력하세요."
                 android:gravity="center"/>
 
             <!--<Spinner
